# ercot-transmission-cost-allocation-study

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pytest.yml
assumptions/: approximation_registry.md  export_treatment_rules.md  net_load_definition.md  proxy_class_mapping.md  tcos_target.md  tdsp_mapping.md  zonal_mapping.md
data_manifest/: licensing_policy.md  overview.md  sources.yaml  validation_checks.md
docs/: SCOPE.md  cbtca-integration-audit.md  community-review-guide.md  limitations.md  methodology-scorecard-framework.md  methodology-scorecard-results.md  relay-governance.md  synthetic-data.md  validation.md
docs/decision-log/: ADR-001-scope-lock.md  ADR-002-net-load-definition.md  ADR-003-licensed-data-boundary.md  ADR-004-cbtca-candidate.md  ADR-005-approximation-policy.md  ADR-006-proxy-segmentation-limits.md  ADR-007-export-rule-preprocessing.md  ADR-008-cbtca-integration-approach.md
methodologies/: 12cp.md  12cp_net_load.md  4cp.md  4cp_net_load.md  cbtca.md  cbtca_sensitivities.md  hybrid_vol_12cp_nl.md
notebooks/: 01_data_manifest_feasibility.ipynb  02_baseline_methodologies.ipynb  03_comparative_evaluation.ipynb
src/comparison/: README.md  __init__.py  metrics.py  scorecard.py  synthetic_data.py
src/config/: sensitivity_matrix.yaml
src/data/: README.md  preprocessing.py
src/models/: __init__.py  base.py  cbtca.py  four_cp.py  four_cp_net_load.py  hybrid_vol_12cp_nl.py  (+2 more)
tests/: test_baseline_models.py  test_cbtca.py  test_comparison.py  test_preprocessing.py
(+2 files in other folders)
