[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ercot-transmission-cost-allocation-study"
version = "0.1.0"
description = "Open-source comparison of ERCOT transmission cost allocation methodologies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Garrett Morrow"}]
dependencies = [
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "pandas>=2.0",
  "pytest>=8.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
