[build-system]
requires = ["setuptools==78.1.1", "wheel>=0.45,<0.46"]
build-backend = "setuptools.build_meta"

[project]
name = "ercot-transmission-cost-allocation-study"
version = "0.1.0"
description = "Open-source comparison of ERCOT transmission cost allocation methodologies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Garrett Morrow"}]
dependencies = [
  "pydantic==2.12.5",
  "PyYAML==6.0.2",
  "pandas==3.0.1",
  "pytest==9.0.2"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
packages = ["src"]
